--- a/MyApplicationsName.htm
+++ b/MyApplicationsName.htm
@@ -12,30 +12,31 @@
     <!-- 
         The story in spoken words:
 
-        Involved are 5 files:
+        Involved are 6 files:
         1. MyApplicationsName.htm
         2. mvc/model/MyApplicationsName.js
         3. mvc/model/model1.json
         4. mvc/controller/FirstClass.js
         5. mvc/controller/SecondClass.js
+        6. mvc/controller/my-example-php-file.php
 
-        This set of 5 files, represent a template 
-        with best practices for setting up an application from the scratch. 
+        This set of 6 files, represent a template 
+        with best practices for setting up a clean application from the scratch. 
         The given structure follows the MVC-pattern (Model-View-Controller)
         and the module-pattern.
 
         The MODEL:
         the center of the "model"-part, is the file "mvc/model/MyApplicationsName.js",
         where all the needed configurations/settings of the application
-        and the retrieved JSON-files should be placed.
+        and the retrieved JSON-files and datbase-content should be placed.
 
         The VIEW:
-        the center of the "view"-part, is the DOM in this "MyApplicationsName.htm"-file
+        the "view"-part, is the DOM in this file (MyApplicationsName.htm)
         and would be additionaly the CSS-files (here not included)
 
         The CONTROLLER:
         the "controller"-part are the rest of the files:
-        "mvc/controller/FirstClass.js" and "mvc/controller/SecondClass.js"
+        "mvc/controller/FirstClass.js", "mvc/controller/SecondClass.js" and "mvc/controller/my-example-php-file.php"
         and all other classes which would be added as needed.
         Note: Every class is a file, is a module.
     -->
@@ -46,16 +47,17 @@
 
 
     <!-- The CENTER for Configuration and Model (JSONs) must be included first. -->
-    <script src="mvc/model/MyApplicationsName.js?since=202309150721&svnrevision=121"></script>
+    <script src="mvc/model/MyApplicationsName.js?since=202309150721&revision=121"></script>
 
     <!-- The Classes / Modules. The order of inclusion doesnt matter. -->
-    <script src="mvc/controller/FirstClass.js?since=202309150721&svnrevision=121"></script>
-    <script src="mvc/controller/SecondClass.js?since=202309150721&svnrevision=121"></script>
+    <script src="mvc/controller/FirstClass.js?since=202309150721&revision=121"></script>
+    <script src="mvc/controller/SecondClass.js?since=202309150721&revision=121"></script>
 
 
     <script>
+
         /**
-         * CONFIGURE the application (the settings are in MyApplicationsName.js)
+         * CONFIGURE the application (the pre-settings are in MyApplicationsName.js)
         */
         window.MyApplicationsName.someConfig = "ABC";
         window.MyApplicationsName.language = "Esperanto";
@@ -69,10 +71,9 @@
 
 
         /**
-         * INVOKE public functions from the classes of the application.
+         * INVOKE the initialisation of the application (starting).
         */
-        myFC.FirstClassPublic();
-        mySC.init();
+        myFirC.init();
 
 
         /**
@@ -81,16 +82,9 @@
         console.log("window.MyApplicationsName");
         console.log(window.MyApplicationsName);
 
+
     </script>
 
 </body>
 
 </html>
-
-
-
-
-
-
-
-
